plugins/qpa: implement platform accessibility

This allows screen readers to read window titles in a tabbox.

BUG: 472643
FIXED-IN: 5.27.9