src/plugins/qpa/integration.cpp
@@ -7,6 +7,7 @@
 
     SPDX-License-Identifier: GPL-2.0-or-later
 */
+
 #include "integration.h"
 #include "backingstore.h"
 #include "eglplatformcontext.h"
@@ -24,6 +25,7 @@
 #include <QTimer>
 #include <QtConcurrentRun>
 
+#include <qpa/qplatformaccessibility.h>
 #include <qpa/qplatformnativeinterface.h>
 #include <qpa/qplatformwindow.h>
 #include <qpa/qwindowsysteminterface.h>
@@ -31,6 +33,7 @@
 #include <QtGui/private/qgenericunixeventdispatcher_p.h>
 #include <QtGui/private/qgenericunixfontdatabase_p.h>
 #include <QtGui/private/qgenericunixthemes_p.h>
+#include <QtGui/private/qspiaccessiblebridge_p.h>
 #include <QtGui/private/qunixeventdispatcher_qpa_p.h>
 
 namespace KWin
@@ -152,6 +155,14 @@ QPlatformOpenGLContext *Integration::createPlatformOpenGLContext(QOpenGLContext 
         return platformContext;
     }
     return nullptr;
+}
+
+QPlatformAccessibility *Integration::accessibility() const
+{
+    if (!m_accessibility) {
+        m_accessibility.reset(new QSpiAccessibleBridge());
+    }
+    return m_accessibility.get();
 }
 
 void Integration::handleWorkspaceCreated()
